vlib/v/checker/tests/fn_init_sig.out
vlib/v/checker/tests/fn_init_sig.vv:1:1: error: fn `init` cannot have a return type
    1 | fn init() int {
      | ~~~~~~~~~~~~~
    2 |     return 1
    3 | }
vlib/v/checker/tests/fn_init_sig.vv:5:1: error: fn `init` must not be public
    3 | }
    4 | 
    5 | pub fn init() int {
      | ~~~~~~~~~~~~~~~~~
    6 |     return 1
    7 | }
vlib/v/checker/tests/fn_init_sig.vv:5:1: error: fn `init` cannot have a return type
    3 | }
    4 | 
    5 | pub fn init() int {
      | ~~~~~~~~~~~~~~~~~
    6 |     return 1
    7 | }
